--- a/frontend/src/components/routes/InoutPage/Allinout/AllRouts.css
+++ b/frontend/src/components/routes/InoutPage/Allinout/AllRouts.css
@@ -1,26 +1,101 @@
 .MainBody {
 
-    height: 91dvh;
-   
-
-   
+    min-height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 
+    
+    .TheBoxs
+    {
+        background-color: transparent;
+        position: absolute;
+        transform: translate(0%,-50%);
+        top : 50%;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+
+            .BacksBtn{
+        
+                position: absolute;
+                top : 0px;
+                left : 00px;
+            
+        
+                height: 40px;
+                width: 40px;
+                background-color: blue;
+                font-size: x-large;
+                border-radius: 50%;
+                border: none;
+        
+                
+        
+                .line1{
+        
+                    height: 3px;
+                    width: 50%;
+                    background-color: black;
+                    position: absolute;
+                    top:50%;
+                    left: 50%;
+                    transform: translate(-50%,-50%) rotateZ(-45deg);
+        
+                }
+        
+                .line2{
+        
+                    height: 3px;
+                    width: 50%;
+                    background-color: black;
+                    position: absolute;
+                    top:50%;
+                    left: 50%;
+                    transform: translate(-50%,-50%) rotateZ(45deg);
+        
+                }
+        
+        }
+
+        .BoxSubHead{
+            height: 40px;
+            font-size: larger;
+            padding-block: 0em;
+            color: whitesmoke;
+            background-color: transparent;
+
+        }
+
+        
+        
+    }
+
+
 }
 
 .ButtonsBox {
 
-    height: 600px;
+    height: 500px;
     width: 400px;
     /* background-color: blue; */
+
+    position: absolute;
+    transform: translate(0%,-50%);
+
+    top : 55%;
+
 
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
+
+
 
     .buttonsbtn{
 
@@ -106,9 +181,6 @@
 }
 
 
-
-
-
 @keyframes shine {
 0% {
     left: -100px;
@@ -145,10 +217,10 @@ to {
     border-left: 2px solid rgba(255, 255, 255, 0.2);
 
     
-    position: absolute;
+    /* position: absolute;
     top : 55%;
     left:50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%); */
 
 
 
@@ -267,10 +339,10 @@ to {
     border-right: 2px solid rgba(255, 255, 255, 0.2);
     border-left: 2px solid rgba(255, 255, 255, 0.2);
 
-    position: absolute;
+    /* position: absolute;
     top : 55%;
     left:50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%); */
 
 
 
@@ -456,3 +528,4 @@ to {
     }
 
 }
+
