--- a/frontend/src/components/routes/InoutPage/header.css
+++ b/frontend/src/components/routes/InoutPage/header.css
@@ -12,6 +12,10 @@
     border-bottom-left-radius: 10px ;
     border-bottom-right-radius: 10px ;
 
+    position: fixed;
+    top: 0;
+    left : 0;
+
     
 
     display: flex;
