--- a/frontend/src/components/routes/InoutPage/Allinout/AllRouts.css
+++ b/frontend/src/components/routes/InoutPage/Allinout/AllRouts.css
@@ -317,6 +317,12 @@ to {
         padding-bottom: 10px;
 
     }
+    .InLabel2{
+
+        font-size: larger;
+        padding-bottom: 5px;
+
+    }
 
 
 
